chore: whitelist coveralls audit ci - GHSA-p8p7-x288-28g6 - GHSA-72xf-g2v4-qvf3

--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -3,5 +3,8 @@
   "moderate": true,
   "low": true,
   "report-type": "summary",
-  "allowlist": []
+  "allowlist": [
+    "GHSA-72xf-g2v4-qvf3",
+    "GHSA-p8p7-x288-28g6"
+  ]
 }
